# RefinedMegaDepth

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  environment.yml  main.py  overlap_score_demo.ipynb  pyproject.toml  refine_depth_maps.py  requirements.txt  setup.cfg
configs/: config.yaml  default.yaml  paths.yaml
configs/retrieval/: netvlad.yaml
docs/: conf.py  index.rst  megadepth.metrics.rst  megadepth.pipelines.rst  megadepth.postprocessing.rst  megadepth.rst  megadepth.visualization.rst  modules.rst  scripts.rst
mega_depth/metrics/: overlap.py
mega_depth/models/: models.py
mega_depth/utils/: utils.py
megadepth/: pipeline.py  reconstruction.py
megadepth/configs/: default.yaml  features_and_matches.yaml  features_and_matching.yaml  mvs.yaml  paths.yaml  sfm.yaml
megadepth/metrics/: angle.py  metadata.py  nighttime.py  overlap.py
megadepth/pipelines/: colmap.py  dense_pipeline.py  hloc.py  loftr.py  pipeline.py  pixsfm.py  sparse_pipeline.py
megadepth/postprocessing/: cleanup.py  image_processing.py  semantic_filtering.py  semantic_segmentation.py
megadepth/training/: dataset.py  model.py  train.py
megadepth/utils/: args.py  concatenate.py  config.py  constants.py  enums.py  io.py  setup.py  (+5 more)
notebooks/: baseline_overview.ipynb  daytime_annotation.ipynb  depth_map_comparison.ipynb  epipolar_lines.ipynb  explore_exif.ipynb  model_alignment.ipynb  overlap_score_demo.ipynb  pipeline_demo.ipynb  plot_metrics.ipynb  postprocessing.ipynb  projections_pycolmap.ipynb  sanity-check-overlap.ipynb  unregistered_images.ipynb  visualizations.ipynb  visualize_depth.ipynb
scripts/: convert_model.py  create_depth_map_comparisons.py  create_movies.sh  create_overview.py  create_visualizations.py  install_colmap.sh  install_colmap_cuda.sh  install_colmap_m1.sh  install_dnc.sh  install_flickr.sh  install_hloc.sh  install_m1.sh  install_pixsfm_m1.sh  install_pyceres.sh  install_pycolmap_m1.sh  launcher.py
src/: image_processing.py  models.py  semantic_filtering.py  utils.py
(+54 files in other folders)
