[metadata]
name = megadepth
version = 0.0.0
description = megadepth package.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.9


[options]
include_package_data = True
packages = find:
install_requires =
	numpy
	matplotlib


[options.packages.find]
include = megadepth*
